--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.org.springframework.web = DEBUG
 #spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=- 1;DB_CLOSE_ON_EXIT=FALSE
 
-spring.profiles.active=jpadao
+spring.profiles.active=springdatajpa
 
 #spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.DefaultComponentSafeNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
